Fix collapsing of Account Auth CTA buttons

--- a/styles/account/_account-auth-flow.scss
+++ b/styles/account/_account-auth-flow.scss
@@ -1,10 +1,8 @@
 .account-auth-flow-cta {
+  margin: 10px;
   padding: 6px 20px;
   border-radius: 40px;
   font-size: $font-size-xxxl;
-  &:not(:last-of-type) {
-    margin-right: 20px;
-  }
 }
 
 input[type=email].account-auth-flow-form-email {
